[package]
name = "fortis_sdk"
readme = "README.md"
description = "fortis rust sdk"
homepage="https://github.com/Fortis-labs/sdk"
repository ="https://github.com/Fortis-labs/sdk"
version = "1.0.4"
edition = "2021"
license-file = "LICENSE"

[lib]
name = "fortis_sdk"

[dependencies]
borsh = "1.6.0"
solana-client = "3.0.0"
solana-message = "3.0.0"
solana-sdk = "3.0.0"
thiserror = "1.0.48"

[features]
default = []
